fix overflow text

--- a/src/styles/pages/Collection/NFT.scss
+++ b/src/styles/pages/Collection/NFT.scss
@@ -24,7 +24,7 @@
 
 .NFT-card {
   border-radius: 15px !important;  
-  min-width: 207px !important;
+  min-width: 249px !important;
 
 }
 
@@ -75,11 +75,19 @@
   color: #d4d4d4;
 }
 
+.NFT-price-width{
+max-width: 100px !important;
+
+}
+
 .nft-item-price {
+  white-space:nowrap!important;
+  overflow: hidden!important;
+  text-overflow: ellipsis!important; 
   font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   background: linear-gradient(
     90deg,
     #f9e0b3 0%,
